err/tornadopack.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/BareNecessities-0.2.8.egg-info'...
Listing './lib/python3.5/site-packages/CommandTool-0.4.1.egg-info'...
Listing './lib/python3.5/site-packages/TornadoPack-0.1.1.egg-info'...
Listing './lib/python3.5/site-packages/bn'...
Compiling './lib/python3.5/site-packages/bn/__init__.py'...
***   File "./lib/python3.5/site-packages/bn/__init__.py", line 170
    except error, err:
                ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/commandtool'...
Compiling './lib/python3.5/site-packages/commandtool/__init__.py'...
***   File "./lib/python3.5/site-packages/commandtool/__init__.py", line 448
    print help(service)
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/commandtool/recipes_267662.py'...
***   File "./lib/python3.5/site-packages/commandtool/recipes_267662.py", line 88
    print 'Without wrapping function\n'
                                      ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/tornado'...
Compiling './lib/python3.5/site-packages/tornado/httpclient.py'...
***   File "./lib/python3.5/site-packages/tornado/httpclient.py", line 81
    except pycurl.error, e:
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/tornado/httpserver.py'...
***   File "./lib/python3.5/site-packages/tornado/httpserver.py", line 227
    except socket.error, e:
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/tornado/ioloop.py'...
***   File "./lib/python3.5/site-packages/tornado/ioloop.py", line 228
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/tornado/iostream.py'...
***   File "./lib/python3.5/site-packages/tornado/iostream.py", line 185
    except socket.error, e:
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/tornado/locale.py'...
***   File "./lib/python3.5/site-packages/tornado/locale.py", line 162
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/tornado/options.py'...
***   File "./lib/python3.5/site-packages/tornado/options.py", line 350
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/tornado/template.py'...
***   File "./lib/python3.5/site-packages/tornado/template.py", line 124
    exec self.compiled in namespace
            ^
SyntaxError: Missing parentheses in call to 'exec'

Compiling './lib/python3.5/site-packages/tornado/testing.py'...
***   File "./lib/python3.5/site-packages/tornado/testing.py", line 172
    raise self.__failure[0], self.__failure[1], self.__failure[2]
                           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/tornado/web.py'...
***   File "./lib/python3.5/site-packages/tornado/web.py", line 649
    locales.sort(key=lambda (l, s): s, reverse=True)
                            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/tornado/websocket.py'...
***   File "./lib/python3.5/site-packages/tornado/websocket.py", line 161
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/tornado/win32_support.py'...
***   File "./lib/python3.5/site-packages/tornado/win32_support.py", line 90
    except socket.error, detail:
                       ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/tornado-1.1.1.egg-info'...
Listing './lib/python3.5/site-packages/tornadopack'...
Compiling './lib/python3.5/site-packages/tornadopack/__init__.py'...
***   File "./lib/python3.5/site-packages/tornadopack/__init__.py", line 150
    print "Serving on http://%s:%s/"%(host, port)
                                   ^
SyntaxError: invalid syntax

Listing './share'...
Listing './share/python-wheels'...
